package net.cabinet.backendspring.helper.enums;

public enum ModePaiement {
    ESPECES,
    CARTE,
    ASSURANCE
}
