package net.cabinet.backendspring.helper.enums;


public enum Role {
    MEDECIN,
    SECRETAIRE,
    ADMIN
}
