package net.cabinet.backendspring.helper.enums;

public enum Sexe {
    M,
    F
}
