package net.cabinet.backendspring.helper.enums;

public enum Statut {
    CONFIRME,
    ANNULE,
    EN_ATTENTE,
    TERMINE
}
