package net.cabinet.backendspring.helper.enums;

public enum StatutFacture {
    PAYEE,
    NON_PAYEE,
    ANNULEE
}
