package net.cabinet.backendspring.helper.enums;


public enum TypeConsultation {
    CONSULTATION,
    CONTROLE
}
