package net.cabinet.backendspring.helper.enums;

public enum TypeMutuelle {
    CNSS,
    CNOPS,
    RAM
}
