package net.cabinet.backendspring.helper.enums;

public enum TypeNotification {
    PATIENT_EN_COURS,
    RAPPEL_RDV,
    RDV_ANNULE,
    NOUVEAU_RDV
}
